Fix bug where list of characters was vertically aligned

--- a/src/characters.css
+++ b/src/characters.css
@@ -52,7 +52,6 @@ html, body {
   display: flex;
   flex-direction: column;
   flex: 1 0 auto;
-  justify-content: center;
 }
 
 #title {
